# neewer-sacn

./: .gitignore  CLAUDE.md  README.md  neewer.py  neewer_config.py  neewer_sacn.py  neewer_scenes.py  neewer_tui.py  probe_tags.py  pyproject.toml  requirements.txt  test_audio.py  test_config.py  test_protocol.py  test_sacn_bridge.py  test_scenes.py
.github/workflows/: ci.yml  codeql.yml
docs/: protocol.md
docs/plans/: 2026-02-25-custom-scenes-tui-audio-design.md  2026-02-25-scenes-tui-audio-plan.md
examples/: color-cycle.batch  dawn-to-dusk.batch  effects-custom.batch  effects-demo.batch  photo-assist.batch  rgb-showcase.batch  studio-setup.batch  warm-sunset.batch
re_tools/: apk_analysis.md
scenes/: alert.yaml  beat_flash.py  campfire.py  frequency_map.py  interview.yaml  rainbow_chase.py  sound_pulse.py  sunset-fade.yaml
src/neewer/: __init__.py  __main__.py  audio.py  config.py  probe_tags.py  protocol.py  sacn.py  scenes.py  tui.py
tests/: conftest.py  test_audio.py  test_config.py  test_protocol.py  test_sacn.py  test_scenes.py
