[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neewer-ble"
version = "0.1.0"
description = "BLE protocol library for Neewer LED lights — control, scenes, grouping, and audio-reactive effects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.21.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
audio = ["numpy>=1.24.0", "sounddevice>=0.4.6"]
tui = ["textual>=0.80.0"]
sacn = ["sacn>=1.9.0"]
full = [
    "neewer-ble[audio,tui,sacn]",
]
dev = [
    "neewer-ble[full]",
    "pytest>=7.0",
]

[project.scripts]
neewer = "neewer.protocol:main_sync"
neewer-sacn = "neewer.sacn:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
